--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>Denver Nuggets - Home</title>
+        <title>Denver Nuggets - Contact</title>
         <link rel="shortcut icon" href="assets/img/logo.ico" alt="Denver Nuggets Logo"/>
         <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
         <meta charset="utf-8"/>
-        <meta name="description" content="Officical web page of Denver Nuggets, basketball team from USA playing in NBA League"/>
-        <meta name="keywords" content="Denver Nuggets, Nikola Jokic, Basketball, NBA, 2023 NBA champions"/>
+        <meta name="description" content="Contact page of Denver Nuggets, basketball team from USA playing in NBA League"/>
+        <meta name="keywords" content="Denver Nuggets, Denver, Basketball, NBA "/>
         <meta name="author" content="Aleksa Savic"/>
-        <meta name="copyright" content="Aleksa Savic 2023"/>
+        <meta name="copyright" content="Aleksa savic 2023"/>
         <meta name="language" content="english"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <script src="https://kit.fontawesome.com/d7dfb3a573.js" crossorigin="anonymous"></script>
@@ -37,12 +37,12 @@
                 </div>
                 <nav>
                     <ul id="links">
-                        <li><a class="active" href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="history.html">History</a></li>
                         <li><a href="players.html">Players</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
                         <li><a href="shop.html">Shop</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a class="active" href="contact.html">Contact</a></li>
                         <li><a href="author.html">Author</a></li>
                     </ul>
                     <ul id="social">
@@ -57,79 +57,42 @@
         </header>
         <main>
             <div id="cover">
-                <div id="cover-img" class="one"></div>
-                <h2>Denver Nuggets</h2>
+                <div id="cover-img" class="five"></div>
+                <h2>Contact</h2>
             </div>
             <div class="section white">
-                <div class="title">
-                    <h2>Our players</h2>
-                </div>
-                <div class="content">
-                    <div class="player">
-                        <img src="assets/img/p15.jpg" alt="Nikola Jokic"/>
-                        <h3>Nikola Jokic</h3>
-                        <p>#15</p>
-                        <p>Center</p>
+                <div class="content border">
+                    <div id="info">
+                        <h3>Contact us</h3>
+                        <ul>
+                            <li><i class="fa-solid fa-location-dot"></i>&nbsp;&nbsp;Murica Street 15, Denver</li>
+                            <li><i class="fa-solid fa-envelope"></i>&nbsp;&nbsp;denvernuggets@gmail.com</li>
+                            <li><i class="fa-solid fa-phone"></i>&nbsp;&nbsp;+1 123 4567</li>
+                        </ul>
+                        <ul>
+                            <li><a target="_blank" href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i>&nbsp;&nbsp;Facebook</a></li>
+                            <li><a target="_blank" href="https://www.twitter.com"><i class="fa-brands fa-x-twitter"></i>&nbsp;&nbsp;Twitter (X)</a></li>
+                            <li><a target="_blank" href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i>&nbsp;&nbsp;Instagram</a></li>
+                            <li><a target="_blank" href="https://www.tiktok.com"><i class="fa-brands fa-tiktok"></i>&nbsp;&nbsp;Tiktok</a></li>
+                            <li><a target="_blank" href="https://www.youtube.com"><i class="fa-brands fa-youtube"></i>&nbsp;&nbsp;Youtube</a></li>
+                        </ul>
                     </div>
-                    <div class="player">
-                        <img src="assets/img/p27.jpg" alt="Jamal Murray"/>
-                        <h3>Jamal Murray</h3>
-                        <p>#27</p>
-                        <p>Guard</p>
-                    </div>
-                    <div class="player">
-                        <img src="assets/img/p1.jpg" alt="Newa Swing DaBall"/>
-                        <h3>Newa Swing DaBall</h3>
-                        <p>#1</p>
-                        <p>Forward</p>
-                    </div>
+                    <form id="con" action="#" method="get">
+                        <div class="consec">
+                            <label for="name">Full name</label><br/><br/>
+                            <input type="text" id="name" name="name" placeholder="John Doe" required="required"/>
+                        </div>
+                        <div class="consec">
+                            <label for="mail">Email</label><br/><br/>
+                            <input type="email" id="mail" name="mail" placeholder="something@example.com" required="required"/>
+                        </div>
+                        <div class="consec">
+                            <label for="text">Message</label><br/><br/>
+                            <textarea id="text" name="text" placeholder="Write us" required="required"></textarea>
+                        </div>
+                        <input type="submit" id="send" name="send" value="Send"/>
+                    </form>
                 </div>
-                <div class="more">
-                    <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
-                </div>
-            </div>
-            <div class="section blue">
-                <div class="title">
-                    <h2>Gallery</h2>
-                </div>
-                <div class="content">
-                    <img class="gal" src="assets/img/img6.jpg" alt="Denver Rockets Logo"/>
-                    <img class="gal" src="assets/img/img7.jpg" alt="Melo and The Answer"/>
-                    <img class="gal" src="assets/img/img8.jpg" alt="Best duo in NBA"/>
-                </div>
-                <div class="more">
-                    <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
-                </div>
-            </div>
-            <div class="section white">
-                <div class="title">
-                    <h2>Merch</h2>
-                </div>
-                <div class="content">
-                    <div class="item">
-                        <img src="assets/img/it1.jpg" alt="Jersey"/>
-                        <h3>Jersey</h3>
-                        <a href="#">&euro;130.00 EUR</a>
-                    </div>
-                    <div class="item">
-                        <img src="assets/img/it2.jpg" alt="Hat"/>
-                        <h3>Hat</h3>
-                        <a href="#">&euro;42.00 EUR</a>
-                    </div>
-                    <div class="item">
-                        <img src="assets/img/it3.jpg" alt="Basketball ball"/>
-                        <h3>Basketball ball</h3>
-                        <a href="#">&euro;30.00 EUR</a>
-                    </div>
-                </div>
-                <div class="more">
-                    <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
-                </div>
-            </div>
-            <div class="section subs">
-                <h2>Stay in the Know</h2>
-                <h3>Sign up for the Nuggets Insider newsletter and receive exclusive access to Denver Nuggets offers, news, and more!</h3>
-                <a href="#">Sign up</a>
             </div>
         </main>
         <footer>
