--- a/players.html
+++ b/players.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>Denver Nuggets - Home</title>
+        <title>Denver Nuggets - Players</title>
         <link rel="shortcut icon" href="assets/img/logo.ico" alt="Denver Nuggets Logo"/>
         <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
         <meta charset="utf-8"/>
-        <meta name="description" content="Officical web page of Denver Nuggets, basketball team from USA playing in NBA League"/>
-        <meta name="keywords" content="Denver Nuggets, Nikola Jokic, Basketball, NBA, 2023 NBA champions"/>
+        <meta name="description" content="Squad of Denver Nuggets, basketball team from USA playing in NBA League"/>
+        <meta name="keywords" content="Denver Nuggets, Nikola Jokic, Jamal Murray, Aaron Gordon, Deandre Jordan, Reggie Jackson"/>
         <meta name="author" content="Aleksa Savic"/>
-        <meta name="copyright" content="Aleksa Savic 2023"/>
+        <meta name="copyright" content="Aleksa savic 2023"/>
         <meta name="language" content="english"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <script src="https://kit.fontawesome.com/d7dfb3a573.js" crossorigin="anonymous"></script>
@@ -37,9 +37,9 @@
                 </div>
                 <nav>
                     <ul id="links">
-                        <li><a class="active" href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="history.html">History</a></li>
-                        <li><a href="players.html">Players</a></li>
+                        <li><a class="active" href="players.html">Players</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
                         <li><a href="shop.html">Shop</a></li>
                         <li><a href="contact.html">Contact</a></li>
@@ -57,13 +57,10 @@
         </header>
         <main>
             <div id="cover">
-                <div id="cover-img" class="one"></div>
-                <h2>Denver Nuggets</h2>
+                <div id="cover-img" class="three"></div>
+                <h2>Players</h2>
             </div>
             <div class="section white">
-                <div class="title">
-                    <h2>Our players</h2>
-                </div>
                 <div class="content">
                     <div class="player">
                         <img src="assets/img/p15.jpg" alt="Nikola Jokic"/>
@@ -83,53 +80,43 @@
                         <p>#1</p>
                         <p>Forward</p>
                     </div>
-                </div>
-                <div class="more">
-                    <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
-                </div>
-            </div>
-            <div class="section blue">
-                <div class="title">
-                    <h2>Gallery</h2>
-                </div>
-                <div class="content">
-                    <img class="gal" src="assets/img/img6.jpg" alt="Denver Rockets Logo"/>
-                    <img class="gal" src="assets/img/img7.jpg" alt="Melo and The Answer"/>
-                    <img class="gal" src="assets/img/img8.jpg" alt="Best duo in NBA"/>
-                </div>
-                <div class="more">
-                    <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
-                </div>
-            </div>
-            <div class="section white">
-                <div class="title">
-                    <h2>Merch</h2>
-                </div>
-                <div class="content">
-                    <div class="item">
-                        <img src="assets/img/it1.jpg" alt="Jersey"/>
-                        <h3>Jersey</h3>
-                        <a href="#">&euro;130.00 EUR</a>
+                    <div class="player">
+                        <img src="assets/img/p50.jpg" alt="Aaron Gordon"/>
+                        <h3>Aaron Gordon</h3>
+                        <p>#50</p>
+                        <p>Forward</p>
                     </div>
-                    <div class="item">
-                        <img src="assets/img/it2.jpg" alt="Hat"/>
-                        <h3>Hat</h3>
-                        <a href="#">&euro;42.00 EUR</a>
+                    <div class="player">
+                        <img src="assets/img/p0.jpg" alt="Christian Braun"/>
+                        <h3>Christian Braun</h3>
+                        <p>#0</p>
+                        <p>Guard</p>
                     </div>
-                    <div class="item">
-                        <img src="assets/img/it3.jpg" alt="Basketball ball"/>
-                        <h3>Basketball ball</h3>
-                        <a href="#">&euro;30.00 EUR</a>
+                    <div class="player">
+                        <img src="assets/img/p5.jpg" alt="KCP"/>
+                        <h3>KCP</h3>
+                        <p>#5</p>
+                        <p>Guard</p>
+                    </div>
+                    <div class="player">
+                        <img src="assets/img/p6.jpg" alt="Deandre Jordan"/>
+                        <h3>Deandre Jordan</h3>
+                        <p>#6</p>
+                        <p>Center</p>
+                    </div>
+                    <div class="player">
+                        <img src="assets/img/p7.jpg" alt="Reggie Jackson"/>
+                        <h3>Reggie Jackson</h3>
+                        <p>#7</p>
+                        <p>Guard</p>
+                    </div>
+                    <div class="player">
+                        <img src="assets/img/p8.jpg" alt="Peyton Watson"/>
+                        <h3>Peyton Watson</h3>
+                        <p>#8</p>
+                        <p>Guard</p>
                     </div>
                 </div>
-                <div class="more">
-                    <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
-                </div>
-            </div>
-            <div class="section subs">
-                <h2>Stay in the Know</h2>
-                <h3>Sign up for the Nuggets Insider newsletter and receive exclusive access to Denver Nuggets offers, news, and more!</h3>
-                <a href="#">Sign up</a>
             </div>
         </main>
         <footer>
