--- a/gallery.html
+++ b/gallery.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>Denver Nuggets - Home</title>
+        <title>Denver Nuggets - Gallery</title>
         <link rel="shortcut icon" href="assets/img/logo.ico" alt="Denver Nuggets Logo"/>
         <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
         <meta charset="utf-8"/>
-        <meta name="description" content="Officical web page of Denver Nuggets, basketball team from USA playing in NBA League"/>
-        <meta name="keywords" content="Denver Nuggets, Nikola Jokic, Basketball, NBA, 2023 NBA champions"/>
+        <meta name="description" content="Denver Nuggets gallery - legendary images through franchise history"/>
+        <meta name="keywords" content="Denver Nuggets, Denver Rockets, Alex English, NBA, Dikembe Mutombo, Byron Beck"/>
         <meta name="author" content="Aleksa Savic"/>
         <meta name="copyright" content="Aleksa Savic 2023"/>
         <meta name="language" content="english"/>
@@ -37,10 +37,10 @@
                 </div>
                 <nav>
                     <ul id="links">
-                        <li><a class="active" href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="history.html">History</a></li>
                         <li><a href="players.html">Players</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
+                        <li><a class="active" href="gallery.html">Gallery</a></li>
                         <li><a href="shop.html">Shop</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="author.html">Author</a></li>
@@ -57,79 +57,48 @@
         </header>
         <main>
             <div id="cover">
-                <div id="cover-img" class="one"></div>
-                <h2>Denver Nuggets</h2>
+                <div id="cover-img" class="four"></div>
+                <h2>Gallery</h2>
             </div>
             <div class="section white">
-                <div class="title">
-                    <h2>Our players</h2>
-                </div>
                 <div class="content">
-                    <div class="player">
-                        <img src="assets/img/p15.jpg" alt="Nikola Jokic"/>
-                        <h3>Nikola Jokic</h3>
-                        <p>#15</p>
-                        <p>Center</p>
-                    </div>
-                    <div class="player">
-                        <img src="assets/img/p27.jpg" alt="Jamal Murray"/>
-                        <h3>Jamal Murray</h3>
-                        <p>#27</p>
-                        <p>Guard</p>
-                    </div>
-                    <div class="player">
-                        <img src="assets/img/p1.jpg" alt="Newa Swing DaBall"/>
-                        <h3>Newa Swing DaBall</h3>
-                        <p>#1</p>
-                        <p>Forward</p>
-                    </div>
+                    <figure>
+                        <img src="assets/img/img6.jpg" alt="Denver Rockets logo"/>
+                        <figcaption>Denver Rockets logo</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="assets/img/img1.jpg" alt="Byron Beck"/>
+                        <figcaption>Byron beck</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="assets/img/img2.jpg" alt="Denver Rockets squad"/>
+                        <figcaption>Denver Rockets squad</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="assets/img/img3.jpg" alt="Denver Nuggets 1986"/>
+                        <figcaption>Denver Nuggets 1986</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="assets/img/img4.jpg" alt="Alex English"/>
+                        <figcaption>Alex English</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="assets/img/img5.jpg" alt="Dikembe Mutombo"/>
+                        <figcaption>Dikembe Mutombo</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="assets/img/img7.jpg" alt="Melo and The Answer"/>
+                        <figcaption>Melo and The Answer</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="assets/img/img8.jpg" alt="Best duo in NBA"/>
+                        <figcaption>Best duo in NBA</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="assets/img/img9.jpg" alt="2023 NBA champions"/>
+                        <figcaption>2023 NBA champions</figcaption>
+                    </figure>
                 </div>
-                <div class="more">
-                    <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
-                </div>
-            </div>
-            <div class="section blue">
-                <div class="title">
-                    <h2>Gallery</h2>
-                </div>
-                <div class="content">
-                    <img class="gal" src="assets/img/img6.jpg" alt="Denver Rockets Logo"/>
-                    <img class="gal" src="assets/img/img7.jpg" alt="Melo and The Answer"/>
-                    <img class="gal" src="assets/img/img8.jpg" alt="Best duo in NBA"/>
-                </div>
-                <div class="more">
-                    <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
-                </div>
-            </div>
-            <div class="section white">
-                <div class="title">
-                    <h2>Merch</h2>
-                </div>
-                <div class="content">
-                    <div class="item">
-                        <img src="assets/img/it1.jpg" alt="Jersey"/>
-                        <h3>Jersey</h3>
-                        <a href="#">&euro;130.00 EUR</a>
-                    </div>
-                    <div class="item">
-                        <img src="assets/img/it2.jpg" alt="Hat"/>
-                        <h3>Hat</h3>
-                        <a href="#">&euro;42.00 EUR</a>
-                    </div>
-                    <div class="item">
-                        <img src="assets/img/it3.jpg" alt="Basketball ball"/>
-                        <h3>Basketball ball</h3>
-                        <a href="#">&euro;30.00 EUR</a>
-                    </div>
-                </div>
-                <div class="more">
-                    <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
-                </div>
-            </div>
-            <div class="section subs">
-                <h2>Stay in the Know</h2>
-                <h3>Sign up for the Nuggets Insider newsletter and receive exclusive access to Denver Nuggets offers, news, and more!</h3>
-                <a href="#">Sign up</a>
             </div>
         </main>
         <footer>
