--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li><i class="fa-solid fa-envelope"></i>&nbsp;&nbsp;denvernuggets@gmail.com</li>
                         <li><i class="fa-solid fa-phone"></i>&nbsp;&nbsp;+1 123 4567</li>
                     </ul>
-                    <form>
+                    <form method="GET" action="#">
                         <input type="text" placeholder="Search ..."/>
                     </form>
                 </div>
@@ -170,8 +170,8 @@
                 <div class="footer-section">
                     <h3>Useful links</h3>
                     <ul>
-                        <li><a href="sitemap.html"><i class="fa-solid fa-sitemap"></i>&nbsp;&nbsp;Sitemap</a></li>
-                        <li><a target="_blank" href="rss.html"><i class="fa-solid fa-rss"></i>&nbsp;&nbsp;RSS</a></li>
+                        <li><a href="sitemap.xml"><i class="fa-solid fa-sitemap"></i>&nbsp;&nbsp;Sitemap</a></li>
+                        <li><a target="_blank" href="rss.xml"><i class="fa-solid fa-rss"></i>&nbsp;&nbsp;RSS</a></li>
                         <li></li>
                     </ul>
                 </div>
