--- a/author.html
+++ b/author.html
@@ -17,9 +17,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet"/>
     </head>
     <body>
-        <div id="back">
-            <a href="#"><i class="fa-solid fa-arrow-up"></i></a>
-        </div>
+        <a id="back" href="#"><i class="fa-solid fa-arrow-up"></i></a>
         <header>
             <div id="logo">
                 <a href="index.html"><img src="assets/img/logo.png" alt="Denver Nuggets Logo"/> <h1>Denver<br/>Nuggets</h1></a>
