--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@
                         <p>Forward</p>
                     </div>
                 </div>
-                <div class="more">
-                    <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
-                </div>
+                <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
             </div>
             <div class="section blue">
                 <div class="title">
@@ -95,9 +93,7 @@
                     <img class="gal" src="assets/img/img7.jpg" alt="Melo and The Answer"/>
                     <img class="gal" src="assets/img/img8.jpg" alt="Best duo in NBA"/>
                 </div>
-                <div class="more">
-                    <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
-                </div>
+                <a href="gallery.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
             </div>
             <div class="section white">
                 <div class="title">
@@ -120,9 +116,7 @@
                         <a href="#">&euro;30.00 EUR</a>
                     </div>
                 </div>
-                <div class="more">
-                    <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
-                </div>
+                 <a href="shop.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
             </div>
             <div class="section subs">
                 <h2>Stay in the Know</h2>
