--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                     </div>
                 </div>
                 <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
+                <div class="cleaner"></div>
             </div>
             <div class="section blue">
                 <div class="title">
@@ -94,6 +95,7 @@
                     <img class="gal" src="assets/img/img8.jpg" alt="Best duo in NBA"/>
                 </div>
                 <a href="gallery.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
+                <div class="cleaner"></div>
             </div>
             <div class="section white">
                 <div class="title">
@@ -117,6 +119,7 @@
                     </div>
                 </div>
                  <a href="shop.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
+                 <div class="cleaner"></div>
             </div>
             <div class="section subs">
                 <h2>Stay in the Know</h2>
