--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
                         <p>Forward</p>
                     </div>
                 </div>
-                <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
-                <div class="cleaner"></div>
+                <div class="more">
+                    <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
+                </div>
             </div>
             <div class="section blue">
                 <div class="title">
@@ -94,8 +95,9 @@
                     <img class="gal" src="assets/img/img7.jpg" alt="Melo and The Answer"/>
                     <img class="gal" src="assets/img/img8.jpg" alt="Best duo in NBA"/>
                 </div>
-                <a href="gallery.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
-                <div class="cleaner"></div>
+                <div class="more">
+                    <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
+                </div>
             </div>
             <div class="section white">
                 <div class="title">
@@ -118,8 +120,9 @@
                         <a href="#">&euro;30.00 EUR</a>
                     </div>
                 </div>
-                 <a href="shop.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
-                 <div class="cleaner"></div>
+                <div class="more">
+                    <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
+                </div>
             </div>
             <div class="section subs">
                 <h2>Stay in the Know</h2>
