--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <img class="gal" src="assets/img/img8.jpg" alt="Best duo in NBA"/>
                 </div>
                 <div class="more">
-                    <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
+                    <a href="gallery.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
                 </div>
             </div>
             <div class="section white">
@@ -121,7 +121,7 @@
                     </div>
                 </div>
                 <div class="more">
-                    <a href="players.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
+                    <a href="shop.html">See more <i class="fa-solid fa-circle-arrow-right"></i></a>
                 </div>
             </div>
             <div class="section subs">
