--- a/author.html
+++ b/author.html
@@ -59,7 +59,7 @@
                 <h2>Author</h2>
             </div>
             <div class="section white">
-                <div class="content author">
+                <div class="content" id="conaut">
                     <img src="assets/img/author.jpg" alt="author"/>
                     <div id="ainfo">
                         <p>Full name: Aleksa Savic</p>
