--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                 <h2>Contact</h2>
             </div>
             <div class="section white">
-                <div class="content border">
+                <div class="content" id="conaut">
                     <div id="info">
                         <h3>Contact us</h3>
                         <ul>
