--- a/contact.html
+++ b/contact.html
@@ -78,15 +78,15 @@
                     <form id="con" action="#" method="GET">
                         <div class="consec">
                             <label for="name">Full name</label><br/><br/>
-                            <input type="text" id="name" name="name" placeholder="John Doe" required="required"/>
+                            <input type="text" id="name" name="name" placeholder="John Doe" required="required"/><br/><br/>
                         </div>
                         <div class="consec">
                             <label for="mail">Email</label><br/><br/>
-                            <input type="email" id="mail" name="mail" placeholder="something@example.com" required="required"/>
+                            <input type="email" id="mail" name="mail" placeholder="something@example.com" required="required"/><br/><br/>
                         </div>
                         <div class="consec">
                             <label for="text">Message</label><br/><br/>
-                            <textarea id="text" name="text" placeholder="Write us" required="required"></textarea>
+                            <textarea id="text" name="text" placeholder="Write us" required="required"></textarea><br/><br/>
                         </div>
                         <input type="submit" id="send" name="send" value="Send"/>
                     </form>
