--- a/author.html
+++ b/author.html
@@ -62,11 +62,14 @@
                 <div class="content" id="conaut">
                     <img src="assets/img/author.jpg" alt="author"/>
                     <div id="ainfo">
-                        <p>Full name: Aleksa Savic</p>
-                        <p>Index: 5/22</p>
-                        <p>Education: Visoka ICT</p>
-                        <p>Born date: 06.06.2003.</p>
-                        <p>Born in: Smederevska Palanka</p>
+                        <ul>
+                            <li id="lihead">Author Info:</li>
+                            <li>Full name: Aleksa Savic</li>
+                            <li>Index: 5/22</li>
+                            <li>Born in: Smederevska Palanka</li>
+                            <li>Born date: 6th June 2003</li>
+                            <li>Education: Visoka ICT</li>
+                        </ul>
                     </div>
                 </div>
             </div>
