--- a/contact.html
+++ b/contact.html
@@ -59,10 +59,18 @@
                 <h2>Contact</h2>
             </div>
             <div class="section white">
+                <div id="cover">
+                <div id="cover-img" class="five"></div>
+                <h2>Contact</h2>
+            </div>
+            <div class="section white">
+                <div class="title">
+                    <h3>Contact us</h3>
+                </div>
                 <div class="content" id="conaut">
                     <div id="info">
-                        <h3>Contact us</h3>
                         <ul>
+                            <li id="lihead">Contact info:</li>
                             <li><i class="fa-solid fa-location-dot"></i>&nbsp;&nbsp;Murica Street 15, Denver</li>
                             <li><i class="fa-solid fa-envelope"></i>&nbsp;&nbsp;denvernuggets@gmail.com</li>
                             <li><i class="fa-solid fa-phone"></i>&nbsp;&nbsp;+1 123 4567</li>
