--- a/author.html
+++ b/author.html
@@ -82,7 +82,7 @@
                 <div class="footer-section">
                     <h3>Navigation</h3>
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="history.html">History</a></li>
                         <li><a href="players.html">Players</a></li>
                         <li><a href="gallery.html">Gallery</a></li>
